# robotframework-tracer

./: .gitignore  CHANGELOG.md  Display.py  DisplayService.py  DisplayServiceManager.py  ListenerClass.py  README.md  README_DEV.md  TODO.md  TracerLabel.py  compile_proto.ps1  display.proto  display_pb2.py  display_pb2.pyi  display_pb2_grpc.py  out.txt  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test.robot
src/: Colors.py  Display.py  Listener.py  ListenerClass.py  ListenerManager.ts  MouseTracer.py  PythonManager.ts  extension.ts
src/robotframework_tracer/: Colors.py  ConfigurationManager.ts  Display.py  DisplayService.py  DisplayServiceManager.py  Listener.py  ListenerManager.ts  MouseTracer.py  PythonManager.ts  configurations.py  display_pb2_grpc.py  extension.ts
src/robotframework_tracer/config/: Configurations.py  ExecutionTraceConfigurations.py  MouseTraceConfigurations.py
src/robotframework_tracer/config/types/: Location.py
src/robotframework_tracer/style/: Colors.py  CycleColors.py  ExecutionTracerStyle.py  Tkinter.py
src/robotframework_tracer/ui/: Display.py  DisplayService.py  DisplayServiceManager.py  ExecutionTracer.py  MouseTracer.py
src/robotframework_tracer/win_api/: mouse.py  types.py
tests/robotframework_tracer/style/: test_CycleColors.py
tests/robotframework_tracer/ui/: test_MouseTracer.py
tests/robotframework_tracer/win_api/: test_mouse.py
