[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["dependencies"]
name = "robotframework-tracer"
version = "0.0.1"
authors = [{ name = "Example Author", email = "author@example.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
